# nutramilo-nis

./: CITATION.cff  LICENSE  NOTICE  NOTICE.txt  PKG-INFO  README.md  pypi-publish-nis.yml  pyproject.toml
.github/workflows/: pypi-publish-nis.yml
nutramilo-nis/: classify.py
nutramilo_nis/: __init__.py  nis.py
nutramilo_nis.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_nis.py  test_v1_0_1_validation.py
