[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutramilo-nis"
version = "1.1.5"
description = "Nutramilo Insulin Score (NIS) — open algorithm for predicting postprandial insulin response from macronutrient composition."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ivan Inkov", email = "inkov@nutramilo.bg" },
    { name = "International Sci Ink Press Ltd EOOD", email = "research@nutramilo.bg" },
]
keywords = [
    "insulin", "postprandial", "glycemic", "nutrition", "metabolism",
    "food insulin index", "NIS", "diabetes", "nutrigenomics", "biomedical"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4"]
validation = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10"]

[project.urls]
Homepage = "https://nutramilo.com/science"
Repository = "https://github.com/nutramilo/nutramilo-nis"
Documentation = "https://nutramilo.com/science/nis"
Paper = "https://doi.org/10.XXXX/ijmrcr.2026.NIS"
Issues = "https://github.com/nutramilo/nutramilo-nis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nutramilo_nis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
