[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutramilo-nis"
version = "1.1.8"
description = "Open-source algorithm for estimating the relative insulinogenic potential of meals from nutritional composition."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    { name = "Ivan Inkov", email = "inkov@nutramilo.bg" },
]
keywords = [
    "insulin", "postprandial", "glycemic", "nutrition", "metabolism",
    "food insulin index", "NIS", "diabetes", "biomedical"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4"]
validation = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10"]

[project.urls]
Homepage = "https://nutramilo.com/science"
Repository = "https://github.com/axilla-score/nutramilo-nis"
Documentation = "https://nutramilo.com/science/nis"
Issues = "https://github.com//axilla-score/nutramilo-nis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nutramilo_nis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
